--- a/pages/myhttp/index.html
+++ b/pages/myhttp/index.html
@@ -22,7 +22,7 @@
 
     <!-- Video -->
     <video class="w-full rounded-lg shadow-lg mb-8" controls autoplay muted loop>
-      <source src="assets/http_demo.mp4" type="video/mp4" />
+      <source src="myhttp/assets/http_demo.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
 
