--- a/pages/myhttp/index.html
+++ b/pages/myhttp/index.html
@@ -11,11 +11,12 @@
   <div class="max-w-3xl mx-auto py-10 px-5">
 
     <!-- Title -->
-    <h1 class="text-4- font-extrabold mb-4 text-gray-900">
-      Tru Bui: Custom C++ Web Server
-    </h1>
+    <h1 class="text-4xl font-bold mb-3">Custom C++ Web Server</h1>
 
     <!-- Subtitle -->
+    <p class="text-lg text-gray-700 mb-8">
+      Tru Bui
+    </p>
     <p class="text-lg text-gray-700 mb-8">
       A complete HTTP server built from scratch in C/C++.
     </p>
