--- a/pages/myshell/index.html
+++ b/pages/myshell/index.html
@@ -11,7 +11,7 @@
   <div class="max-w-3xl mx-auto py-10 px-5">
 
     <!-- Title -->
-    <h1 class="text-4xl font-bold mb-3">Custom Unix Shell</h1>
+    <h1 class="text-4xl font-bold mb-3">TestCustom Unix Shell</h1>
     <!-- Subtitle -->
     <p class="text-lg text-gray-700 mb-8">
       Tru Bui
