--- a/pages/simplecompiler/index.html
+++ b/pages/simplecompiler/index.html
@@ -38,6 +38,14 @@
       Your browser does not support the video tag.
     </video>
 
+    <p class="text-lg text-gray-700 mb-6">
+      This demo shows my Simple C Compiler (<code>scc</code>) compiling
+      <code>and.c</code> and <code>bubblesort.c</code> into assembly files
+      (<code>.s</code>). I then assemble them with <code>gcc -c</code> to produce
+      object files, and finally link everything into runnable executables using
+      <code>gcc -no-pie</code>.
+    </p>
+
     <!-- Features -->
     <h3 class="text-2xl font-semibold mb-4">Key Features</h3>
 
