--- a/pages/mymalloc/index.html
+++ b/pages/mymalloc/index.html
@@ -32,7 +32,7 @@
 
     <h2 class="text-2xl font-semibold mb-3">Key Features</h2>
     <ul class="list-disc ml-6 mb-8 text-gray-700">
-      <li>Segregated free lists (59 size classes)</li>
+      <li>Segregated free lists</li>
       <li>Boundary tags with left/right block tracking</li>
       <li>Coalescing and block splitting</li>
       <li>Thread-safe allocator (global mutex)</li>
