--- a/pages/simplecompiler/index.html
+++ b/pages/simplecompiler/index.html
@@ -51,13 +51,13 @@
 
     <ul class="list-disc pl-6 space-y-2 text-gray-800 mb-10">
       <li>Flex lexer + Bison parser for SimpleC grammar</li>
-      <li>Generates x86-64 assembly compatible with gcc/clang</li>
+      <li>Generates x86-64 assembly compatible with gcc</li>
       <li>Register-backed expression stack using rbx, r10, r13, r14, r15</li>
       <li>Arithmetic, logical, relational, and pointer operations</li>
       <li>Short-circuit evaluation for <code>&&</code> and <code>||</code></li>
-      <li>If/else, while, for, and do-while code generation</li>
+      <li>If/else, while, for, and do-while</li>
       <li>Array indexing and pointer dereference</li>
-      <li>Function calls with System V AMD64 calling convention</li>
+      <li>Function calls</li>
       <li>Stack frame layout: saved registers, arguments, locals</li>
       <li>Automatic label generation for branches and loops</li>
     </ul>
